--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <div class="wrap"></div>
+    <div class="wrap">
+        <header class="header">头部</header>
+        <div class="con">内容</div>
+        <footer class="footer">底部</footer>
+    </div>
 </body>
 
 </html>
