--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div class="wrap">
-        <header class="header">头部</header>
-        <div class="con">内容</div>
-        <footer class="footer">底部</footer>
+        <header class="header">头部，我是头部</header>
+        <div class="con">内容，我是内容</div>
+        <footer class="footer">底部,我是底部</footer>
     </div>
 </body>
 
